[gd_scene load_steps=7 format=3 uid="uid://b6sy572h06xqn"]

[ext_resource type="Script" path="res://addons/universal_settings/scenes/universal_settings_menu.gd" id="1_c2d6w"]
[ext_resource type="PackedScene" uid="uid://bbed87snykmws" path="res://addons/universal_settings/scenes/volume_slider.tscn" id="3_eeyia"]

[sub_resource type="Animation" id="Animation_mjsge"]
resource_name = "HideSettings"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_gj7co"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ic603"]
resource_name = "ShowSettings"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_heq78"]
_data = {
"HideSettings": SubResource("Animation_mjsge"),
"RESET": SubResource("Animation_gj7co"),
"ShowSettings": SubResource("Animation_ic603")
}

[node name="UniversalSettingsMenu" type="ColorRect"]
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)
script = ExtResource("1_c2d6w")

[node name="CenterContainer" type="CenterContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -299.0
offset_top = -257.0
offset_right = 299.0
offset_bottom = 257.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "Settings
"

[node name="TabContainer" type="TabContainer" parent="CenterContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(550, 300)
layout_mode = 2
size_flags_horizontal = 4
current_tab = 0
all_tabs_in_front = true
tab_focus_mode = 0

[node name="Graphics" type="TabBar" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 36
tab_alignment = 1
clip_tabs = false
scroll_to_selected = false
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -266.5
offset_top = -122.5
offset_right = 266.5
offset_bottom = 122.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 6

[node name="MonitorContainer" type="HBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer"]
layout_mode = 2

[node name="MonitorLabel" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer/MonitorContainer"]
custom_minimum_size = Vector2(225, 0)
layout_mode = 2
text = "Monitor:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MonitorButton" type="OptionButton" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer/MonitorContainer" groups=["Button"]]
custom_minimum_size = Vector2(275, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
focus_mode = 0
selected = 0
fit_to_longest_item = false
item_count = 2
popup/item_0/text = "Monitor 0 (Current)"
popup/item_1/text = "Monitor 1"
popup/item_1/id = 1

[node name="WindowModeContainer" type="HBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer"]
layout_mode = 2

[node name="WindowModeLabel" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer/WindowModeContainer"]
custom_minimum_size = Vector2(225, 0)
layout_mode = 2
text = "Display Mode:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="WindowModeButton" type="OptionButton" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer/WindowModeContainer" groups=["Button"]]
custom_minimum_size = Vector2(275, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
focus_mode = 0
fit_to_longest_item = false

[node name="ResolutionContainer" type="HBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer"]
layout_mode = 2

[node name="ResolutionLabel" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer/ResolutionContainer"]
custom_minimum_size = Vector2(225, 0)
layout_mode = 2
text = "Window Size:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ResolutionOptionButton" type="OptionButton" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer/ResolutionContainer" groups=["Button"]]
custom_minimum_size = Vector2(275, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
focus_mode = 0
fit_to_longest_item = false

[node name="MSAAContainer" type="HBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer"]
layout_mode = 2

[node name="MSAALabel" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer/MSAAContainer"]
custom_minimum_size = Vector2(225, 0)
layout_mode = 2
text = "MSAA:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MSAAOptionButton" type="OptionButton" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer/MSAAContainer" groups=["Button"]]
custom_minimum_size = Vector2(275, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
tooltip_text = "* Multi-Sample Anti-Aliasing

Smooths out polygon edges"
focus_mode = 0
selected = 2
fit_to_longest_item = false
item_count = 4
popup/item_0/text = "None"
popup/item_1/text = "2x"
popup/item_1/id = 1
popup/item_2/text = "4x"
popup/item_2/id = 2
popup/item_3/text = "8x"
popup/item_3/id = 3

[node name="FSRContainer" type="HBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer"]
layout_mode = 2

[node name="FSRLabel" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer/FSRContainer"]
custom_minimum_size = Vector2(225, 0)
layout_mode = 2
text = "Scaling Mode:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="FSROptionButton" type="OptionButton" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer/FSRContainer" groups=["Button"]]
custom_minimum_size = Vector2(275, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
tooltip_text = "* Scaling Mode

Bilinear: Fast but poor quality
FSR 1.0:  Works best  with TAA + MSAA
FSR 2.2:  Slowest but best quality, no need for TAA 
                 and you should disable MSAA"
focus_mode = 0
selected = 0
fit_to_longest_item = false
item_count = 3
popup/item_0/text = "Bilinear"
popup/item_1/text = "FSR 1.0"
popup/item_1/id = 1
popup/item_2/text = "FSR 2.2"
popup/item_2/id = 2

[node name="3DScaleContainer" type="HBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer"]
layout_mode = 2

[node name="3DScaleLabel" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer/3DScaleContainer"]
custom_minimum_size = Vector2(225, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Scaling:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="3DScaleSlider" type="HSlider" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer/3DScaleContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
tooltip_text = "* FidelityFX Super Resolution

No Scaling: 100%
Ultra Quality: 77%
Quality: 67%
Balanced: 59%
Performance: 50%"
focus_mode = 0
max_value = 4.0
value = 4.0
tick_count = 5

[node name="Scale3DLabel" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer/3DScaleContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "100%"
vertical_alignment = 1

[node name="AAContainer" type="HBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="FXAACheckBox" type="CheckButton" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer/AAContainer" groups=["Button"]]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
tooltip_text = "* Fast Approximate Anti-Aliasing

Computationally cheap but blurry anti-aliasing"
action_mode = 0
text = "FXAA:"
alignment = 2

[node name="TAACheckBox" type="CheckButton" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer/AAContainer" groups=["Button"]]
custom_minimum_size = Vector2(155, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
tooltip_text = "* Temporal Anti-Aliasing

Uses multiple frames to
smooth out jaggies,
flickering, and shimmering
without blurring"
action_mode = 0
text = "TAA:"
alignment = 2

[node name="VSyncCheckBox" type="CheckButton" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer/AAContainer" groups=["Button"]]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
tooltip_text = "* VSync

ON: GPU will sync frame rate
        to monitor's frame rate.
OFF: GPU will try to render as
         many frames per second"
action_mode = 0
text = "VSync:"
alignment = 2

[node name="Audio" type="TabBar" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Audio"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -291.5
offset_top = -74.0
offset_right = 291.5
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="MasterSlider" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer" instance=ExtResource("3_eeyia")]
layout_mode = 2
bus_name = "Master"

[node name="MusicSlider" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer" instance=ExtResource("3_eeyia")]
layout_mode = 2
bus_name = "Music"

[node name="SFXSlider" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer" instance=ExtResource("3_eeyia")]
layout_mode = 2
bus_name = "SFX"

[node name="VoiceSlider" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer" instance=ExtResource("3_eeyia")]
layout_mode = 2

[node name="SaveButton" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer" groups=["Button"]]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 36
text = "Save"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_heq78")
}

[connection signal="item_selected" from="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer/MonitorContainer/MonitorButton" to="." method="_on_monitor_button_item_selected"]
[connection signal="item_selected" from="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer/WindowModeContainer/WindowModeButton" to="." method="_on_window_mode_button_item_selected"]
[connection signal="item_selected" from="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer/ResolutionContainer/ResolutionOptionButton" to="." method="_on_resolution_option_button_item_selected"]
[connection signal="item_selected" from="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer/MSAAContainer/MSAAOptionButton" to="." method="_on_msaa_option_button_item_selected"]
[connection signal="item_selected" from="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer/FSRContainer/FSROptionButton" to="." method="_on_fsr_option_button_item_selected"]
[connection signal="toggled" from="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer/AAContainer/FXAACheckBox" to="." method="_on_fxaa_check_box_toggled"]
[connection signal="toggled" from="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer/AAContainer/TAACheckBox" to="." method="_on_taa_check_box_toggled"]
[connection signal="toggled" from="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/VBoxContainer/AAContainer/VSyncCheckBox" to="." method="_on_v_sync_check_box_toggled"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
